--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
         <testcontainers.version>1.19.8</testcontainers.version>
         <wiremock.version>3.0.1</wiremock.version>
         <loki-logback-appender.version>1.3.2</loki-logback-appender.version>
+        <aws-java-sdk.version>1.12.751</aws-java-sdk.version>
     </properties>
 
     <dependencyManagement>
@@ -77,6 +78,11 @@
                 <groupId>org.flywaydb</groupId>
                 <artifactId>flyway-core</artifactId>
                 <version>${flyway.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.amazonaws</groupId>
+                <artifactId>aws-java-sdk</artifactId>
+                <version>${aws-java-sdk.version}</version>
             </dependency>
 
             <dependency>
