--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,8 @@
         <wiremock.version>3.0.1</wiremock.version>
         <loki-logback-appender.version>1.3.2</loki-logback-appender.version>
         <aws-java-sdk.version>1.12.751</aws-java-sdk.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
 
     <dependencyManagement>
@@ -134,7 +136,7 @@
                 <scope>test</scope>
             </dependency>
             <dependency>
-                <groupId>com.github.tomakehurst</groupId>
+                <groupId>org.wiremock</groupId>
                 <artifactId>wiremock</artifactId>
                 <version>${wiremock.version}</version>
                 <scope>test</scope>
