--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up JDK 22
         uses: actions/setup-java@v2
         with:
-          distribution: 'openjdk'
+          distribution: 'temurin'
           java-version: '22'
 
       - name: Build with Maven
