--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <modelmapper.version>3.2.0</modelmapper.version>
         <jackson-datatype-jsr310.version>2.17.1</jackson-datatype-jsr310.version>
         <spring-boot-maven-plugin.version>3.3.0</spring-boot-maven-plugin.version>
+        <maven-jar-plugin.version>3.1.0</maven-jar-plugin.version>
         <maven-failsafe-plugin.version>3.2.5</maven-failsafe-plugin.version>
         <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
         <validator.version>1.9.0</validator.version>
@@ -187,6 +188,21 @@
                                 <artifactId>lombok</artifactId>
                             </exclude>
                         </excludes>
+                    </configuration>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>${maven-jar-plugin.version}</version>
+                    <configuration>
+                        <archive>
+                            <manifest>
+                                <addClasspath>true</addClasspath>
+                                <classpathPrefix>lib/</classpathPrefix>
+                                <mainClass>com.telegrambot.marketplace.TelegramBotApplication</mainClass>
+                            </manifest>
+                        </archive>
                     </configuration>
                 </plugin>
 
