--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
     <properties>
         <java.version>22</java.version>
         <spring-boot.version>3.3.0</spring-boot.version>
+        <hibernate-core.version>6.5.2.Final</hibernate-core.version>
+        <jakarta.persistence-api.version>3.2.0</jakarta.persistence-api.version>
+        <jakarta.validation-api.version>3.1.0</jakarta.validation-api.version>
         <spring-cloud-dependencies.version>2023.0.2</spring-cloud-dependencies.version>
         <telegrambots.version>6.9.7.1</telegrambots.version>
         <logstash.version>7.4</logstash.version>
@@ -26,7 +29,7 @@
         <checkstyle.version>10.2</checkstyle.version>
         <commons.version>3.14.0</commons.version>
         <commons-email.version>1.6.0</commons-email.version>
-        <springdoc.version>1.8.0</springdoc.version>
+        <springdoc-openapi-starter-webmvc-ui.version>2.6.0</springdoc-openapi-starter-webmvc-ui.version>
         <modelmapper.version>3.2.0</modelmapper.version>
         <jackson-datatype-jsr310.version>2.17.1</jackson-datatype-jsr310.version>
         <spring-boot-maven-plugin.version>3.3.0</spring-boot-maven-plugin.version>
@@ -39,6 +42,8 @@
         <wiremock.version>3.0.1</wiremock.version>
         <loki-logback-appender.version>1.3.2</loki-logback-appender.version>
         <aws-java-sdk.version>1.12.751</aws-java-sdk.version>
+        <jaxb.version>2.3.1</jaxb.version>
+        <glassfish-jaxb.version>4.0.5</glassfish-jaxb.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
@@ -60,6 +65,21 @@
                 <scope>import</scope>
             </dependency>
             <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-core</artifactId>
+                <version>${hibernate-core.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>jakarta.persistence</groupId>
+                <artifactId>jakarta.persistence-api</artifactId>
+                <version>${jakarta.persistence-api.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>jakarta.validation</groupId>
+                <artifactId>jakarta.validation-api</artifactId>
+                <version>${jakarta.validation-api.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
                 <version>${spring-cloud-dependencies.version}</version>
@@ -68,8 +88,18 @@
             </dependency>
             <dependency>
                 <groupId>org.springdoc</groupId>
-                <artifactId>springdoc-openapi-ui</artifactId>
-                <version>${springdoc.version}</version>
+                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+                <version>${springdoc-openapi-starter-webmvc-ui.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
+                <version>${springdoc-openapi-starter-webmvc-ui.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-starter-common</artifactId>
+                <version>${springdoc-openapi-starter-webmvc-ui.version}</version>
             </dependency>
 
             <dependency>
@@ -80,6 +110,11 @@
             <dependency>
                 <groupId>org.flywaydb</groupId>
                 <artifactId>flyway-core</artifactId>
+                <version>${flyway.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.flywaydb</groupId>
+                <artifactId>flyway-database-postgresql</artifactId>
                 <version>${flyway.version}</version>
             </dependency>
             <dependency>
@@ -162,6 +197,17 @@
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-classic</artifactId>
                 <version>${logback.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>javax.xml.bind</groupId>
+                <artifactId>jaxb-api</artifactId>
+                <version>${jaxb.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.glassfish.jaxb</groupId>
+                <artifactId>jaxb-runtime</artifactId>
+                <version>${glassfish-jaxb.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
