--- a/service-client/pom.xml
+++ b/service-client/pom.xml
@@ -9,7 +9,7 @@
         <groupId>com.telegrambot.marketplace</groupId>
         <artifactId>telegrambot-parent</artifactId>
         <version>0.0.1-SNAPSHOT</version>
-        <relativePath/>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <properties>
