--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -33,6 +33,13 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.SERVER_SSH_KEY }}
 
+      # Execute SSH command to shut down the application
+      - name: Shutdown application
+        run: |
+          ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
+            pkill -f 'java -jar service-client-0.0.1-SNAPSHOT.jar' || true
+          EOF
+
       # Copy files via SSH
       - name: Copy files via SSH
         run: scp -o StrictHostKeyChecking=no service-client/target/service-client-0.0.1-SNAPSHOT.jar ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:/usr/bot/service-client-0.0.1-SNAPSHOT.jar
@@ -50,9 +57,6 @@ jobs:
           
             # Navigate to application directory
             cd /usr/bot
-          
-            # Kill existing application process
-            pkill -f 'java -jar service-client-0.0.1-SNAPSHOT.jar' || true
           
             # Start application with nohup
             nohup java -jar service-client-0.0.1-SNAPSHOT.jar > bot.log 2>&1 &
