--- a/service-client/src/main/resources/application.yml
+++ b/service-client/src/main/resources/application.yml
@@ -54,8 +54,8 @@ aws:
     privateEndpoint: http://104.194.214.119:9000
     bucketName: productportion
     stuffPlaceFolder: productPortion
-    accessKey: marketplace420
-    secretKey: marketplace420_secret
+    accessKey: B072BVXCPsnfXNlr9HaS
+    secretKey: e5hX9a7WSDFB5GPa9AlVA53HxHFdJBFdDCGTAxpG
 bot:
   name: ${BOT_NAME:BotName}
   token: ${BOT_TOKEN:BotToken}
